-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 061203) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

-----------------------------------------------------------------------

0612003 (v2.3.2)  -** stable release **-
	- edi-entries: edi-33 closed
	- added: support for libsndfile; enabled if libsndfile is
	         detected succesfully by configure; can be disabled
		 with --disable-sndfile
	- added: added new audio input/output types 'audiofile', 
		 'sndfile' and 'mikmod'; see ecasound(1) for more
		 details
	- added: pyecasound/test2_stresstest.py new test case 
	- added: initial Ruby ECI impl added; see rubyecasound/README 
		 for details [janweil]
	- added: --enable-rubyecasound configure option; defaults to
		 yes if ruby interpreter found on the system
	- added: resampling examples to Documentation/examples.html
	- changed: increased default buffer sizes for 'rtnull' objects 
		   to avoid too many xrun warnings; warnings are also
		   no longer printed to stderr - instead a summary 
		   is printed at the end of the session if any xruns
		   have occured
	- changed: Ecasound PDF docs (user's, programmer's and ECI 
		   guides) are now generated using AE fonts; the PDFs 
		   can now be read with readers like xpdf and 
		   probably look better in others [janweil]
	- fixed: pyecasound/test1_stresstest.py was not included in
		 the dist package
	- fixed: libaudiofile - input file audio parameters
		 parsed incorrectly
	- fixed: -x option - truncate outputs - was not working 